tests/miniJava/pos/000012_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { java = false && 0 [ 0 ] ; } }
