tests/miniJava/neg/001936_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = 0 . java ( 0 && ) ; } }
